# capnproto-experiment

./: Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs
src/client/: client.rs
src/schema/: mod.rs  test_schema.capnp  test_schema_capnp.rs
src/server/: server.rs
